# zeroballistics

./: .travis.yml  CMakeLists.txt  Doxyfile  config.h
code/: .cproject  .project  CMakeLists.txt
code/blender_scripts/: cmutils.py  export_dir.py  export_images.py  export_utils.py  gui.py  registry.py
code/bluebeard/: CMakeLists.txt  bluebeard.vcproj  tankLibs.sln
code/bluebeard/src/: AIPlayer.cpp  AIPlayer.h  BbmOsgConverter.h  BufferObject.cpp  BufferObject.h  Camera.h  ClientPlayer.cpp  ClientPlayer.h  ClipmapGrid.cpp  ClipmapGrid.h  Controllable.h  ControllableVisual.cpp  ControllableVisual.h  EffectManager.h  GUIConsole.h  GameHud.cpp  GameHud.h  GameLogicServer.h  GameObjectVisual.cpp  GameObjectVisual.h  Gui.h  HudAlphaBar.cpp  HudAlphaBar.h  HudBar.cpp  HudMessageColors.h  HudNotificationArea.cpp  HudNotificationArea.h  HudTextElement.h  HudTextureElement.cpp  HudTextureElement.h  InputHandler.cpp  InstancedGeometry.cpp  InstancedGeometry.h  NetworkCommandServer.cpp  NetworkServer.cpp  NetworkServer.h  ObjectParts.cpp  ObjectParts.h  OggStream.cpp  OggVorbis.cpp  (+43 more)
code/bluebeard/src/physics/: OdeCollision.cpp  OdeModelLoader.cpp  OdeModelLoader.h  OdeRigidBody.cpp  OdeSimulator.h
code/games/: Ideas.txt
code/games/tank/: CMakeLists.txt  config_client.xml  config_server.xml  ranking.pub  tankClient.vcproj  tankServer.vcproj  tankServerDedicated.vcproj
code/games/tank/documents/: design_thoughts.dox  faq  todo_m.txt
code/games/tank/movies/: make_movie.sh
code/games/tank/src/: AIPlayerDeathmatch.cpp  AIPlayerDeathmatch.h  AIPlayerTeamDeathmatch.cpp  AIPlayerTeamDeathmatch.h  DirectShow.h  GUIClientAuthentication.cpp  GUIHelp.cpp  GUIHostMenu.cpp  GUIHostMenu.h  GUIMatchSummary.h  GUIMatchSummarySoccer.cpp  GUIOptions.cpp  GUIScore.cpp  GUIScoreSoccer.h  GUIServerBrowser.cpp  GUITeamSelect.h  GUITeaser.cpp  GUIUpgradeSystem.cpp  GameHudTank.h  GameHudTankSoccer.cpp  GameHudTankZb.cpp  GameLogicClientCommon.cpp  GameLogicClientDeathmatch.cpp  GameLogicClientSoccer.cpp  GameLogicClientSoccer.h  GameLogicClientTeamDeathmatch.cpp  GameLogicServerCommon.cpp  GameLogicServerDeathmatch.cpp  GameLogicServerSoccer.cpp  GameLogicServerTeamDeathmatch.cpp  GameLogicServerTeamDeathmatch.h  InstantHitWeapon.h  IntegratedServer.h  IntroTask.h  MainMenu.cpp  MainMenu.h  Minimap.cpp  Projectile.cpp  ProjectileVisual.h  Shield.cpp  (+22 more)
code/grome_plugins/: ExpLvl.vcproj  ImpBbm.vcproj  TankPlugins.sln  todo.txt
code/grome_plugins/src/: BbmGromeConverter.cpp  BbmGromeConverter.h  ExpLvl.cpp  ExpLvl.h  ImpBbm.cpp  UtilsGrome.h  main_ImpBbm.cpp
code/libs/bbmloader/: CMakeLists.txt  bbm.vcproj
code/libs/bbmloader/src/: BbmImporter.cpp  LevelData.cpp
code/libs/gzstream/: CMakeLists.txt
code/libs/master/: CMakeLists.txt  master.vcproj
code/libs/master/src/: MasterServerPunchthrough.cpp  MasterServerPunchthrough.h  MasterServerRegistrator.cpp  MasterServerRegistrator.h  MasterServerRequest.cpp  MasterServerRequest.h  ServerInfo.cpp  ServerInfo.h  ServerList.h
code/libs/network/: CMakeLists.txt  network.vcproj
code/libs/network/src/: ClientInterface.cpp  MessageIds.h  MultipleConnectPlugin.cpp  MultipleConnectPlugin.h  NetworkUtils.cpp  NetworkUtils.h  ServerInterface.cpp  ServerInterface.h  VersionHandshakePlugin.cpp  VersionHandshakePlugin.h  VersionInfo.cpp  VersionInfo.h
code/libs/ranking/: CMakeLists.txt  ranking.vcproj
code/libs/ranking/src/: Ranking.h  RankingMatchEvents.cpp  RankingMatchEventsSoccer.cpp  RankingRegisterMatch.h  RankingStatistics.h  RankingStatisticsSoccer.cpp  RankingStatisticsSoccer.h
code/libs/toolbox/: CMakeLists.txt  toolbox.vcproj
code/libs/toolbox/src/: AStarSearch.h  Bitmap.cpp  Console.h  ConsoleApp.h  (+32 more)
code/patches/ode-0.7/: debug_gcc_no_optimizations.patch  hashspace_geom_enabled.patch  quadtree_enum.patch
code/patches/osgParticle/: ParticleSystem.cpp
code/patches/raknet-3.06/: all.patch
code/patches/working/: handshake_nat_fixes_INCOMPLETE.diff  working.diff
code/tools/autopatcher_client/: CMakeLists.txt  config_autopatcher.xml
code/tools/autopatcher_server/: CMakeLists.txt  config_patch_server.xml
code/tools/master_server/: CMakeLists.txt  config_master.xml  start_master.sh
code/tools/modelviewer/: CMakeLists.txt  modelviewer.vcproj
code/tools/particleviewer/: CMakeLists.txt  particleviewer.vcproj
games/tank/: CMakeLists.txt  config_client.xml  config_common.xml  config_modelviewer.xml  config_particleviewer.xml  config_server.xml  tankClient.sln  tankClient.vcproj  tankServer.sln  tankServerDedicated.sln  tankServerDedicated.vcproj
games/tank/documents/: FeatureList.dox  destructable_changes  faq
games/tank/src/: AIPlayerDeathmatch.cpp  AIPlayerSoccer.cpp  AIPlayerSoccer.h  Boost.cpp  Boost.h  DirectShow.cpp  GUIClientAuthentication.cpp  GUIClientAuthentication.h  GUIHelp.h  GUIHostMenu.cpp  GUIHostMenu.h  GUIMatchSummary.cpp  GUIMatchSummarySoccer.h  GUIOptions.cpp  GUIOptions.h  GUIScore.cpp  GUIScore.h  GUIScoreSoccer.cpp  GUIServerBrowser.cpp  GUIServerBrowser.h  GUITankEquipment.cpp  GUITankEquipment.h  GUITeamSelect.cpp  GUITeamSelect.h  GUITeaser.cpp  GUITeaser.h  GUIUpgradeSystem.h  GameHudTank.cpp  GameHudTank.h  GameHudTankSoccer.h  GameHudTankZb.h  GameLogicClientCommon.cpp  GameLogicClientCommon.h  GameLogicClientDeathmatch.cpp  GameLogicClientDeathmatch.h  GameLogicClientSoccer.cpp  GameLogicClientTeamDeathmatch.cpp  GameLogicClientTeamDeathmatch.h  GameLogicServerCommon.cpp  GameLogicServerCommon.h  (+58 more)
tools/autopatcher_server/: CMakeLists.txt  config_patch_server.xml
tools/autopatcher_server/src/: PatcherServer.cpp  PatcherServer.h
tools/master_server/: CMakeLists.txt  config_master.xml  master_server.vcproj
tools/master_server/src/: MasterServer.cpp  MasterServer.h  main_master.cpp
tools/modelviewer/: CMakeLists.txt  modelviewer.vcproj
tools/modelviewer/src/: ModelViewer.cpp  Version.cpp  Version.h  main_viewer.cpp
tools/particleviewer/: CMakeLists.txt  particleviewer.vcproj
tools/particleviewer/src/: CoordinateAxes.h  ParticleViewer.cpp  ParticleViewer.h  Version.cpp  main_viewer.cpp
(+677 files in other folders)
